add nav to camera page
